[gd_scene load_steps=22 format=3 uid="uid://dvapiuj2llrlq"]

[ext_resource type="Script" uid="uid://blhbji210er4q" path="res://crossbow.gd" id="1_0i1vk"]
[ext_resource type="AudioStream" uid="uid://c8riien6g2ofy" path="res://Player/weapon/ALL/Crossbow/crossbow-firing-95020.mp3" id="2_sygcw"]
[ext_resource type="ArrayMesh" uid="uid://ngourgo4tms5" path="res://Player/weapon/ALL/Crossbow/crossbow.res" id="3_7qc7n"]
[ext_resource type="ArrayMesh" uid="uid://unepod5rwmun" path="res://Player/weapon/ALL/Belt/bolt.res" id="3_ygtvb"]
[ext_resource type="Material" uid="uid://c5w2i4ors51to" path="res://blood_buildup.tres" id="4_pbcay"]
[ext_resource type="Shader" uid="uid://lm1gw4o3cyyh" path="res://shaders/ursc_1.3.0/addons/ursc/spatial/standard_opaque.gdshader" id="5_npafi"]
[ext_resource type="Texture2D" uid="uid://udidug1u1tlm" path="res://Player/weapon/ALL/Belt/Material_Base_color.png" id="5_pbcay"]
[ext_resource type="Texture2D" uid="uid://bdewy8hdwe4pq" path="res://Player/weapon/ALL/Crossbow/base2.png" id="6_pigee"]
[ext_resource type="Script" uid="uid://bb3ghyy64k2bd" path="res://addons/godot_state_charts/state_chart.gd" id="9_40l86"]
[ext_resource type="Script" uid="uid://clt3bkcujiepo" path="res://addons/godot_state_charts/compound_state.gd" id="10_2uxmj"]
[ext_resource type="Script" uid="uid://1xhujeketj0r" path="res://addons/godot_state_charts/atomic_state.gd" id="11_x4gdy"]
[ext_resource type="Script" uid="uid://8kg3tepcr415" path="res://addons/godot_state_charts/transition.gd" id="12_cn8s5"]
[ext_resource type="Script" uid="uid://b7i6og46fxorp" path="res://xbow_idle.gd" id="13_0i1vk"]
[ext_resource type="Script" uid="uid://bj22mnnihr537" path="res://xbow_shoot.gd" id="14_sygcw"]
[ext_resource type="Script" uid="uid://b0jyy5d8q8irl" path="res://xbow_reload.gd" id="15_lwxxu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ri8l3"]
render_priority = 0
next_pass = ExtResource("4_pbcay")
shader = ExtResource("5_npafi")
shader_parameter/albedo_color = Color(1, 1, 1, 1)
shader_parameter/albedo_texture = ExtResource("6_pigee")
shader_parameter/albedo_texture_as_primary_color = true
shader_parameter/mix_factor = 1.0
shader_parameter/texture_lod_halve_distance_override = 0.0
shader_parameter/uv_offset = Vector2(0, 0)
shader_parameter/uv_scale = Vector2(1, 1)
shader_parameter/uv_scroll_speed = Vector2(0, 0)
shader_parameter/cull_distance_override = 0.0
shader_parameter/convert_vertex_colors = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_npafi"]
render_priority = 0
shader = ExtResource("5_npafi")
shader_parameter/albedo_color = Color(1, 1, 1, 1)
shader_parameter/albedo_texture = ExtResource("5_pbcay")
shader_parameter/albedo_texture_as_primary_color = true
shader_parameter/mix_factor = 1.0
shader_parameter/texture_lod_halve_distance_override = 0.0
shader_parameter/uv_offset = Vector2(0, 0)
shader_parameter/uv_scale = Vector2(1, 1)
shader_parameter/uv_scroll_speed = Vector2(0, 0)
shader_parameter/cull_distance_override = 0.0
shader_parameter/convert_vertex_colors = false

[sub_resource type="Animation" id="Animation_0s0e8"]
resource_name = "shoot"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.0212931, 0.0396997, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-1.5708, -3.14159, 0.122173), Vector3(-1.74533, -3.14159, 0.0872665), Vector3(-1.5708, -3.14159, 0.122173)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshInstance3D/bolt:visible")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_0i1vk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.5708, -3.14159, 0.122173)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshInstance3D/bolt:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_sygcw"]
resource_name = "reload"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.755175, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-1.5708, -3.14159, 0.122173), Vector3(-0.794945, -1.07762, 0.122173), Vector3(-1.5708, -3.14159, 0.122173)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshInstance3D/bolt:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sygcw"]
_data = {
&"RESET": SubResource("Animation_0i1vk"),
&"reload": SubResource("Animation_sygcw"),
&"shoot": SubResource("Animation_0s0e8")
}

[node name="crossbow" type="Node3D"]
script = ExtResource("1_0i1vk")
swing_sound = ExtResource("2_sygcw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-9.92546, 1.21869, -3.82137e-14, -5.32708e-08, -4.33856e-07, 10, 1.21869, 9.92546, 4.37114e-07, 0, 0, 0)
layers = 2
gi_mode = 2
mesh = ExtResource("3_7qc7n")
surface_material_override/0 = SubResource("ShaderMaterial_ri8l3")

[node name="bolt" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(3.61999e-06, -4.37246e-08, 1, -1, 3.65178e-06, 3.61999e-06, -3.65178e-06, -1, -4.37114e-08, 1.32274e-09, -0.000365422, 0.00624091)
mesh = ExtResource("3_ygtvb")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_npafi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sygcw")
}

[node name="StateChart" type="Node" parent="."]
script = ExtResource("9_40l86")
metadata/_custom_type_script = "uid://bb3ghyy64k2bd"

[node name="CompoundState" type="Node" parent="StateChart"]
script = ExtResource("10_2uxmj")
initial_state = NodePath("idle")

[node name="idle" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("11_x4gdy")

[node name="toShoot" type="Node" parent="StateChart/CompoundState/idle"]
script = ExtResource("12_cn8s5")
to = NodePath("../../shoot")
event = &"shoot"
delay_in_seconds = "0.0"

[node name="idle" type="Node" parent="StateChart/CompoundState/idle"]
script = ExtResource("13_0i1vk")

[node name="shoot" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("11_x4gdy")

[node name="toReload" type="Node" parent="StateChart/CompoundState/shoot"]
script = ExtResource("12_cn8s5")
to = NodePath("../../reload")
event = &"reload"
delay_in_seconds = "0.0"

[node name="shoot" type="Node" parent="StateChart/CompoundState/shoot" node_paths=PackedStringArray("weapon", "state_chart")]
script = ExtResource("14_sygcw")
weapon = NodePath("../../../..")
state_chart = NodePath("../../..")

[node name="reload" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("11_x4gdy")

[node name="toIdle" type="Node" parent="StateChart/CompoundState/reload"]
script = ExtResource("12_cn8s5")
to = NodePath("../../idle")
event = &"idle"
delay_in_seconds = "0.0"

[node name="reload" type="Node" parent="StateChart/CompoundState/reload"]
script = ExtResource("15_lwxxu")

[connection signal="state_entered" from="StateChart/CompoundState/idle" to="StateChart/CompoundState/idle/idle" method="_on_idle_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/idle" to="StateChart/CompoundState/idle/idle" method="_on_idle_state_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/idle" to="StateChart/CompoundState/idle/idle" method="_on_idle_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/shoot" to="StateChart/CompoundState/shoot/shoot" method="_on_shoot_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/shoot" to="StateChart/CompoundState/shoot/shoot" method="_on_shoot_state_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/shoot" to="StateChart/CompoundState/shoot/shoot" method="_on_shoot_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/reload" to="StateChart/CompoundState/reload/reload" method="_on_reload_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/reload" to="StateChart/CompoundState/reload/reload" method="_on_reload_state_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/reload" to="StateChart/CompoundState/reload/reload" method="_on_reload_state_processing"]
